--- a/SpMVC27_Secure_V3_ren/pom.xml
+++ b/SpMVC27_Secure_V3_ren/pom.xml
@@ -5,15 +5,17 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.biz</groupId>
 	<artifactId>sec</artifactId>
-	<name>SpMVC_27_Secure</name>
+	<name>SpMVC27_Secure</name>
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
 		<java-version>1.8</java-version>
 		<org.springframework-version>5.2.5.RELEASE</org.springframework-version>
+
 		<org.spring-security-version>5.2.3.RELEASE</org.spring-security-version>
-		<org.aspectj-version>1.6.10</org.aspectj-version>
 		<org.jasypt-version>1.9.3</org.jasypt-version>
+
+		<org.aspectj-version>1.6.10</org.aspectj-version>
 		<org.slf4j-version>1.7.30</org.slf4j-version>
 	</properties>
 
@@ -37,9 +39,13 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 
-		<!-- spring security 설정 -->
+		<!-- spring seucurity 설정 -->
 
-		<!-- spring security core -->
+		<!-- spring-security-core -->
+		<!-- spring-security-web -->
+		<!-- spring-security-config -->
+		<!-- spring-seurity-taglibs -->
+
 		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-core -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -47,7 +53,6 @@
 			<version>${org.spring-security-version}</version>
 		</dependency>
 
-		<!-- spring security web -->
 		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -55,7 +60,6 @@
 			<version>${org.spring-security-version}</version>
 		</dependency>
 
-		<!-- spring security config -->
 		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-config -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -63,7 +67,7 @@
 			<version>${org.spring-security-version}</version>
 		</dependency>
 
-		<!-- spring security taglibs -->
+
 		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-taglibs -->
 		<dependency>
 			<groupId>org.springframework.security</groupId>
@@ -71,13 +75,13 @@
 			<version>${org.spring-security-version}</version>
 		</dependency>
 
-
 		<!-- https://mvnrepository.com/artifact/org.jasypt/jasypt -->
 		<dependency>
 			<groupId>org.jasypt</groupId>
 			<artifactId>jasypt</artifactId>
 			<version>${org.jasypt-version}</version>
 		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/org.jasypt/jasypt-spring31 -->
 		<dependency>
 			<groupId>org.jasypt</groupId>
@@ -85,8 +89,13 @@
 			<version>${org.jasypt-version}</version>
 		</dependency>
 
-		<!-- db 설정 부분 -->
+		<!-- DB 설정하기 -->
 		<!-- mysql-connector-java -->
+		<!-- spring-jdbc -->
+		<!-- mybatis -->
+		<!-- mybatis-spring -->
+		<!-- commons-dbcp2 -->
+
 		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 		<dependency>
 			<groupId>mysql</groupId>
@@ -94,7 +103,6 @@
 			<version>8.0.19</version>
 		</dependency>
 
-		<!-- spring-jdbc -->
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -115,14 +123,12 @@
 			<artifactId>mybatis-spring</artifactId>
 			<version>2.0.4</version>
 		</dependency>
-
 		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-dbcp2 -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-dbcp2</artifactId>
 			<version>2.7.0</version>
 		</dependency>
-
 
 		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
 		<dependency>
@@ -131,19 +137,20 @@
 			<version>1.18.12</version>
 			<scope>provided</scope>
 		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.10.3</version>
 		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.8.6</version>
 		</dependency>
-
 
 		<!-- AspectJ -->
 		<dependency>
@@ -158,6 +165,7 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>${org.slf4j-version}</version>
 		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
