--- a/SpMVC_27_Secure_V3_ren/.project
+++ b/SpMVC_27_Secure_V3_ren/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SpMVC27_Secure_V4</name>
+	<name>SpMVC_27_Secure_V3_ren</name>
 	<comment></comment>
 	<projects>
 	</projects>
